Example: a form field inside a menu. This was necessary to properly detect `saveNeeded` changes of such fields and validate them when a form is stored. If you need the old behavior, consult the xref:migration:migration-guide.adoc#formfield-visitfields-now-visits-deeper[Migration Guide]).

=== MenuTypes

==== Default menuTypes

Default menuTypes have been added to several widgets.
This means that e.g. the `Table` treats a menu without a menuType as if it had set `Table.MenuTypes.EmptySpace`.
For more information about the default menuTypes see xref:technical-guide:user-interface/widget-reference.adoc#menu-types[MenuTypes].


=== SmartFields: Error-Handling for Key-Lookups

Before this change: If a key-lookup inside a SmartField didn't return a result, the SmartField was presented to the user like no value has been chosen.
Internally, however, the (most likely invalid) value was still set on the SmartField.
Hence, the user couldn't see that the current value is invalid and a new value should be set.

This change puts a warning status on the SmartField if a key-lookup doesn't return a value.

Because of the potential consequences, this change was implemented for ScoutJS only (not for Scout Classic).

== SDK

The Scout IntelliJ plugins have been improved to better support Scout JS development and working with xref:technical-guide:working-with-data/data-object.adoc[Data Objects].

=== Code Completion for TypeScript Based UI Models

To get the code completion for UI models, just start writing or press kbd:[Ctrl,Space].

==== Creating new Fields

Easily create a new `FormField`, `Menu`, `Column` and more Scout objects.

.Create a new field
image::create-new-fields.png[]

==== Select ObjectType

Change the object type of an existing object.

.ObjectType completion
image::objecttype-completion.png[]

==== Property Completion

Get a complete list of available properties in the current context.

.Select a property
image::property-completion.png[]

==== Value Completion
